added docs with scribe
